Fix keyboard overlap issue

--- a/packages/lightwallet/src/app/onboard/onboarding-module.scss
+++ b/packages/lightwallet/src/app/onboard/onboarding-module.scss
@@ -23,9 +23,9 @@ view-verify-backup {
     background-image: linear-gradient(to bottom, color($colors, 'secondary'), lighten(color($colors, 'secondary'), 5%));
 
     text-align: center;
-    overflow-y: hidden;
+    //overflow-y: hidden;
     height: 100%;
-    padding: 0 !important;
+    //padding: 0 !important;
 
     .container {
       height: 100%;
